--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Sarah Finch (Fillwock) # your name (or website title) here
-logo: "/images/profile-pig.jpg" # your photo (or logo) here
+logo: "/images/profile-pic.jpg" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Ph.D., Computer Science (2024)
   <br>
@@ -10,8 +10,14 @@ description: > # your text below (remove <br> elements if you don't need line br
   including the development and deployment of a personal-experience-oriented dialogue system for large-scale usage 
   and improving the evaluation of dialogue models through fine-grained behavior analysis. 
   My most recent and ongoing works focus on improving social understanding and commonsense reasoning in dialogue models in the era of Large Language Models. 
-  # <br><br>
-  # <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
+  <br><br>
+  <em>Awards:</em>
+  Amazon Alexa Prize 3 Winner
+  <br>
+  Emory George W. Woodruff Fellowship
+  <br>
+  Emory Schoettle Research Award
+  <br>
   
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
