--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,20 @@ title: Sarah Finch (Fillwock) # your name (or website title) here
 logo: "/images/profile-pic.jpg" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   &#9733; &#9733; &#9733;
+  <br>
+  Ph.D., Computer Science (2024)
+  <br>
+  Emory University
+  <br>
+  <br>
+  AI/LLM engineer and researcher with 5+ years of experience in machine learning model development and evaluation for human-computer interaction, text processing, and data generation.
+  <br>
+  My previous projects include:
+  <br>
+  * Deployment of large-scale conversational agents during the Amazon Alexa Prize Socialbot Grand Challenge, in which our socialbot Emora won 1st place out of 10 teams in 2020
+  * LLM-based methods for conversational agents, text processing, and data generation
+  * Developing conversational agents that can understand human experience with commonsense reasoning and that adapt to the unique specifics of each user
+  * Evaluation framework design for dialogue models through fine-grained behavior analysis and exploration of different human evaluator demographics 
 
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
