--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Sarah Finch (Fillwock) # your name (or website title) here
+title: Sarah Finch # your name (or website title) here
 logo: "/images/profile-pic.jpg" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   &#9733; &#9733; &#9733; &#9733; &#9733;
