--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,8 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br>
   <br>
   AI/LLM engineer and researcher with 5+ years of experience in machine learning model development and evaluation for human-computer interaction, text processing, and data generation.
+  <br>
+  Currently working as a Post-Doctoral Researcher for developing LLM systems for the classification and understanding of nursing assessment videos.
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme
